v0.73 Mode switching fixes, render larger image to smaller canvas for WebCL when viewport size not divisible by threads, perturb hack

--- a/styles.css
+++ b/styles.css
@@ -60,6 +60,8 @@ div.row input:focus {border-color: blue;}
 div.row select:focus {border-color: blue;}
 div.row textarea:focus {border-color: blue;}
 
+input[type="button"].activemode {border-color: blue;}
+
 #nav span input {height: 18px; font-size: 8pt; padding: 0px; margin: 0px 10px 0px 0px; border: 1px solid #998; border-radius: 3px; background: #665;}
 
 /* Console & help areas */
